added shopping cart impl and reformatted code