@@ -13,8 +13,8 @@ import java.util.concurrent.locks.Lock;
 import java.util.concurrent.locks.ReentrantLock;
 
 /*
- *
- * @author javaugi
+*
+* @author javaugi
 
  */
 public class SixFundamentalThreadSafetyPatterns {
@@ -25,60 +25,61 @@ public class SixFundamentalThreadSafetyPatterns {
         try {
             System.out.println("SixThreadSafetyPatterns");
             System.out.println("1. Immutability: ");
-            // Immutable objects are inherently thread-safe because their state cannot be modified after creation. 
+            // Immutable objects are inherently thread-safe because their state cannot be modified after
+            // creation.
             // This eliminates the possibility of race conditions.
             /*
-            1. Immutability:
-            Key aspects of Immutability:
-                The class is declared final (optional but recommended).
-                All instance variables are declared final.
-                No methods modify the state of the object after creation (no setters).
-                If mutable objects are used internally (like List in this example), defensive copies are made in the constructor, 
-                    and the internal reference is made unmodifiable.
-            */
+      1. Immutability:
+      Key aspects of Immutability:
+          The class is declared final (optional but recommended).
+          All instance variables are declared final.
+          No methods modify the state of the object after creation (no setters).
+          If mutable objects are used internally (like List in this example), defensive copies are made in the constructor,
+              and the internal reference is made unmodifiable.
+             */
             main.runImmutableExample();
 
             System.out.println("2. Synchronization (using synchronized keyword) ");
             /*
-                The synchronized keyword provides a mechanism to control access to shared resources by multiple threads. 
-                    It can be used on methods or blocks of code.            
-            */
+          The synchronized keyword provides a mechanism to control access to shared resources by multiple threads.
+              It can be used on methods or blocks of code.
+             */
             main.runSynchronizationExample();
 
             System.out.println("3. Locks (using java.util.concurrent.locks): ");
             /*
-            The java.util.concurrent.locks package provides more flexible locking mechanisms than the synchronized keyword. 
-                ReentrantLock is a common implementation.             
-            */
+      The java.util.concurrent.locks package provides more flexible locking mechanisms than the synchronized keyword.
+          ReentrantLock is a common implementation.
+             */
             main.runConcurrentLockExample();
 
             System.out.println("4. Atomic Variables (using java.util.concurrent.atomic): ");
             /*
-            Atomic variables provide lock-free, thread-safe operations on single variables. 
-                 They use underlying hardware primitives for efficiency.            
-            */
+      Atomic variables provide lock-free, thread-safe operations on single variables.
+           They use underlying hardware primitives for efficiency.
+             */
             main.runAtomicExample();
 
             System.out.println("5. ThreadLocal: ");
             /*
-            ThreadLocal provides a way to create variables that are accessible only by the thread that created them. 
-                This isolates data and avoids the need for explicit synchronization.            
-            */
+      ThreadLocal provides a way to create variables that are accessible only by the thread that created them.
+          This isolates data and avoids the need for explicit synchronization.
+             */
             main.runThreadLocalExample();
 
             System.out.println("6. Concurrent Collections (using java.util.concurrent): ");
             /*
-            The java.util.concurrent package provides thread-safe collection implementations that are designed for 
-                concurrent access without explicit external synchr            
-            ConcurrentHashMap allows multiple threads to read and write to the map concurrently without the risk of data 
-                corruption. Other concurrent collections include ConcurrentLinkedQueue, CopyOnWriteArrayList, etc.
-            */
+      The java.util.concurrent package provides thread-safe collection implementations that are designed for
+          concurrent access without explicit external synchr
+      ConcurrentHashMap allows multiple threads to read and write to the map concurrently without the risk of data
+          corruption. Other concurrent collections include ConcurrentLinkedQueue, CopyOnWriteArrayList, etc.
+             */
             main.runConcurrentMapExample();
             /*
-            These examples demonstrate some of the fundamental thread safety patterns in Java. The choice of which pattern to
-                use depends on the specific requirements of your application and the nature of the shared data and operations being 
-                performed. Remember to carefully analyze your code for potential race conditions when dealing with multithreading.            
-            */
+      These examples demonstrate some of the fundamental thread safety patterns in Java. The choice of which pattern to
+          use depends on the specific requirements of your application and the nature of the shared data and operations being
+          performed. Remember to carefully analyze your code for potential race conditions when dealing with multithreading.
+             */
         } catch (InterruptedException ex) {
         }
     }
@@ -86,17 +87,19 @@ public class SixFundamentalThreadSafetyPatterns {
     public void runConcurrentMapExample() throws InterruptedException {
         Map<String, Integer> wordCounts = new ConcurrentHashMap<>();
 
-        Runnable task1 = () -> {
-            for (int i = 0; i < 1000; i++) {
-                wordCounts.compute("apple", (key, val) -> (val == null) ? 1 : val + 1);
-            }
-        };
+        Runnable task1
+                = () -> {
+                    for (int i = 0; i < 1000; i++) {
+                        wordCounts.compute("apple", (key, val) -> (val == null) ? 1 : val + 1);
+                    }
+                };
 
-        Runnable task2 = () -> {
-            for (int i = 0; i < 1500; i++) {
-                wordCounts.compute("banana", (key, val) -> (val == null) ? 1 : val + 1);
-            }
-        };
+        Runnable task2
+                = () -> {
+                    for (int i = 0; i < 1500; i++) {
+                        wordCounts.compute("banana", (key, val) -> (val == null) ? 1 : val + 1);
+                    }
+                };
 
         Thread thread1 = new Thread(task1);
         Thread thread2 = new Thread(task2);
@@ -107,13 +110,16 @@ public class SixFundamentalThreadSafetyPatterns {
         thread1.join();
         thread2.join();
 
-        System.out.println("Word counts: " + wordCounts); // Output will show the counts for "apple" and "banana"
+        System.out.println(
+                "Word counts: " + wordCounts); // Output will show the counts for "apple" and "banana"
     }
 
     public void runThreadLocalExample() throws InterruptedException {
-        Runnable task = () -> {
-            System.out.println("Thread: " + Thread.currentThread().getName() + ", ID: " + ThreadId.get());
-        };
+        Runnable task
+                = () -> {
+                    System.out.println(
+                            "Thread: " + Thread.currentThread().getName() + ", ID: " + ThreadId.get());
+                };
 
         Thread thread1 = new Thread(task, "Thread-1");
         Thread thread2 = new Thread(task, "Thread-2");
@@ -137,17 +143,19 @@ public class SixFundamentalThreadSafetyPatterns {
 
     private void runAtomicExample() throws InterruptedException {
         AtomicCounter counter = new AtomicCounter();
-        Runnable incrementTask = () -> {
-            for (int i = 0; i < 1000; i++) {
-                counter.increment();
-            }
-        };
+        Runnable incrementTask
+                = () -> {
+                    for (int i = 0; i < 1000; i++) {
+                        counter.increment();
+                    }
+                };
 
-        Runnable decrementTask = () -> {
-            for (int i = 0; i < 500; i++) {
-                counter.decrement();
-            }
-        };
+        Runnable decrementTask
+                = () -> {
+                    for (int i = 0; i < 500; i++) {
+                        counter.decrement();
+                    }
+                };
 
         Thread thread1 = new Thread(incrementTask);
         Thread thread2 = new Thread(incrementTask);
@@ -183,17 +191,19 @@ public class SixFundamentalThreadSafetyPatterns {
 
     private void runConcurrentLockExample() throws InterruptedException {
         ConcurrentLockCounter counter = new ConcurrentLockCounter();
-        Runnable incrementTask = () -> {
-            for (int i = 0; i < 1000; i++) {
-                counter.increment();
-            }
-        };
+        Runnable incrementTask
+                = () -> {
+                    for (int i = 0; i < 1000; i++) {
+                        counter.increment();
+                    }
+                };
 
-        Runnable decrementTask = () -> {
-            for (int i = 0; i < 500; i++) {
-                counter.decrement();
-            }
-        };
+        Runnable decrementTask
+                = () -> {
+                    for (int i = 0; i < 500; i++) {
+                        counter.decrement();
+                    }
+                };
 
         Thread thread1 = new Thread(incrementTask);
         Thread thread2 = new Thread(incrementTask);
@@ -207,7 +217,7 @@ public class SixFundamentalThreadSafetyPatterns {
         thread2.join();
         thread3.join();
 
-        System.out.println("Final count: " + counter.getCount()); // Expected output: close to 1500        
+        System.out.println("Final count: " + counter.getCount()); // Expected output: close to 1500
     }
 
     public class ConcurrentLockCounter {
@@ -245,17 +255,19 @@ public class SixFundamentalThreadSafetyPatterns {
 
     private void runSynchronizationExample() throws InterruptedException {
         CounterSynchronized counter = new CounterSynchronized();
-        Runnable incrementTask = () -> {
-            for (int i = 0; i < 1000; i++) {
-                counter.increment();
-            }
-        };
+        Runnable incrementTask
+                = () -> {
+                    for (int i = 0; i < 1000; i++) {
+                        counter.increment();
+                    }
+                };
 
-        Runnable decrementTask = () -> {
-            for (int i = 0; i < 500; i++) {
-                counter.decrement();
-            }
-        };
+        Runnable decrementTask
+                = () -> {
+                    for (int i = 0; i < 500; i++) {
+                        counter.decrement();
+                    }
+                };
 
         Thread thread1 = new Thread(incrementTask);
         Thread thread2 = new Thread(incrementTask);
@@ -269,7 +281,7 @@ public class SixFundamentalThreadSafetyPatterns {
         thread2.join();
         thread3.join();
 
-        System.out.println("Final count: " + counter.getCount()); // Expected output: close to 1500        
+        System.out.println("Final count: " + counter.getCount()); // Expected output: close to 1500
     }
 
     public class CounterSynchronized {
@@ -294,9 +306,9 @@ public class SixFundamentalThreadSafetyPatterns {
     }
 
     private void runImmutableExample() {
-        //List<String> initialLabels = Arrays.asList("label1", "label2");
-        //List<String> initialLabels = List.of("label1", "label2");
-        //those above two are aosl immutable and they cannot be used        
+        // List<String> initialLabels = Arrays.asList("label1", "label2");
+        // List<String> initialLabels = List.of("label1", "label2");
+        // those above two are aosl immutable and they cannot be used
         List<String> initialLabels = new java.util.ArrayList<>(List.of("label1", "label2"));
 
         ImmutablePoint point = new ImmutablePoint(10, 20, initialLabels);
@@ -313,7 +325,8 @@ public class SixFundamentalThreadSafetyPatterns {
         }
     }
 
-    public final class ImmutablePoint { // Mark the class as final to prevent subclassing that might introduce mutability
+    public final class ImmutablePoint { // Mark the class as final to prevent subclassing that might introduce
+        // mutability
 
         private final int x;
         private final int y;
@@ -322,7 +335,9 @@ public class SixFundamentalThreadSafetyPatterns {
         public ImmutablePoint(int x, int y, List<String> labels) {
             this.x = x;
             this.y = y;
-            this.labels = Collections.unmodifiableList(new java.util.ArrayList<>(labels)); // Create a copy and make it unmodifiable
+            this.labels
+                    = Collections.unmodifiableList(
+                            new java.util.ArrayList<>(labels)); // Create a copy and make it unmodifiable
         }
 
         public int getX() {
